Ship Q6_K dequant: closes README 4 per-tensor fallback for Llama-3 token_embd / output.weight